# inert-server

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
docs/: api_document.md  db_document.md  db_er_ascii.md  db_pgsql.md  error_code_document.md
src/: lib.rs  main.rs
src/database/: db_test.rs  mod.rs
src/errors/: error_codes.rs  mod.rs
src/handlers/: mod.rs  rest_handlers.rs
src/middlewares/: auth_middlewares.rs
src/routes/: rest.rs
src/routes/rest/: auth.rs  channels.rs  servers.rs  users.rs
src/routes/rest/auth/: handler_login.rs  handler_logout.rs  handler_me.rs  handler_refresh.rs  handler_register.rs
src/routes/rest/channels/: handler_dynamic_channelid_messages.rs
src/routes/rest/servers/: handler_dynamic_id.rs  handler_index.rs
src/routes/rest/servers/dynamic_id/: channels.rs
src/routes/rest/users/: handle_userid.rs
src/utils/: env_loader.rs  helper_handler.rs  jwt.rs  mod.rs
