[package]
name = "inert_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-server = "0.7.2"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
chrono = {version = "0.4.41", features = ["serde"]}
dotenv = "0.15.0"
hex = "0.4.3"
hyper = "1.6.0"
jsonwebtoken = "9.3.1"
native-tls = "0.2.14"
postgres = "0.19.10"
postgres-native-tls = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4"]}
tower = "0.5.2"
uuid = { version = "1", features = ["serde", "v4"] }
